[package]
name = "solana4626"
version = "0.1.0"
description = "Solana program with deposit and withdraw functionality"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana4626"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
solana-program = "1.18.20"
pyth-sdk-solana = "0.9.0"

